exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is not read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "margin": "0",
      "padding": "0",
    }
  }>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Snippet Name"
    id="titleField"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "width": "100%",
      }
    }
    type="text"
    underlineShow={true}
    value="" />
  <SelectField
    autoWidth={false}
    disabled={true}
    fullWidth={false}
    id="languageSelector"
    multiple={false}
    style={
      Object {
        "width": "100%",
      }
    }
    value={1}>
    <MenuItem
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      checked={false}
      desktop={false}
      disabled={false}
      focusState="none"
      insetChildren={false}
      primaryText="Python 3"
      value={1} />
  </SelectField>
  <LockButton
    id="lockButton"
    onClick={[Function]}
    readOnly={false}
    style={Object {}} />
  <SaveMenu
    id="saveMenu"
    onSaveAsClick={[Function]}
    onSaveClick={[Function]}
    style={Object {}} />
</div>
`;

exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "margin": "0",
      "padding": "0",
    }
  }>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Snippet Name"
    id="titleField"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "width": "100%",
      }
    }
    type="text"
    underlineShow={true}
    value="" />
  <SelectField
    autoWidth={false}
    disabled={true}
    fullWidth={false}
    id="languageSelector"
    multiple={false}
    style={
      Object {
        "width": "100%",
      }
    }
    value={1}>
    <MenuItem
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      checked={false}
      desktop={false}
      disabled={false}
      focusState="none"
      insetChildren={false}
      primaryText="Python 3"
      value={1} />
  </SelectField>
  <LockButton
    id="lockButton"
    onClick={[Function]}
    readOnly={true}
    style={Object {}} />
  <SaveMenu
    id="saveMenu"
    onSaveAsClick={[Function]}
    onSaveClick={[Function]}
    style={Object {}} />
</div>
`;
